--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header>
 <!-- navbar -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand fw-bold" href="#"><img src="./images/business.png" alt=""> Justice</a>
+    <div class="container-fluid mb-5">
+      <a class="navbar-brand" href="#"><img class="w-75" src="./images/logo2.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -44,8 +44,23 @@
     </header>
     <!-- main section -->
     <main>
+<!-- banner section -->
+ <section>
+        <div class="banner-img d-flex justify-content-center align-items-center">
+            <div class="text-center g-cols-2">
+                <h1 class="display-3 fw-bold text-white">We Provide Effective
+                    <br> Legal Solutions</h1>
+            <p class="text-white">There are many variations of passages of Life-style available, but the majority
+                <br> have suffered alteration in some form, by injected humour.</p>
+                <button class="px-5 py-2 rounded border-0">Search your services</button>
+                <button class="btn-color px-4 py-2 rounded border-0">Search</button>
+                </div>
+         </div>
+ </section>
 
-    </main>
+
+
+</main>
     <!-- footer section -->
     <footer>
 
