practice-area-added

--- a/index.html
+++ b/index.html
@@ -57,7 +57,74 @@
                 </div>
          </div>
  </section>
-
+<!-- practice area section -->
+<section class="container-fluid my-5">
+    <h1 class="text-center">The Legal Practice Area</h1>
+    <p class="text-center">There are many variations of passages of Life-style available, but the majority have suffered
+        <br> alteration in some form, by injected humour.</p>
+        <div class="row row-cols-1 row-cols-lg-3 gy-3">
+        <div class="col">
+            <div class="card text-center" style="width: 18rem;">
+                <img class="w-25 mx-auto" src="./images/business.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Business Law</h5>
+                  <p class="card-text mb-5">There are many variations of passages of Life-style available, but the majority have suffered alteration in some form, by injected humour.</p>
+                  <a href="#" class="btn btn-color rounded-circle"><i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+            <div class="card text-center bg-secondary-subtle" style="width: 18rem;">
+                <img class="w-25 mx-auto" src="./images/criminal.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Criminal Law</h5>
+                  <p class="card-text">There are many variations of passages of Life-style available, but the majority have suffered alteration in some form, by injected humour.</p>
+                  <a href="#" class="btn btn-color rounded-circle"><i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+            <div class="card text-center" style="width: 18rem;">
+                <img class="w-25 mx-auto" src="./images/child.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Child Support</h5>
+                  <p class="card-text">There are many variations of passages of Life-style available, but the majority have suffered alteration in some form, by injected humour.</p>
+                  <a href="#" class="btn btn-color rounded-circle"><i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+            <div class="card text-center" style="width: 18rem;">
+                <img class="w-25 mx-auto" src="./images/education.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Education Law</h5>
+                  <p class="card-text">There are many variations of passages of Life-style available, but the majority have suffered alteration in some form, by injected humour.</p>
+                  <a href="#" class="btn btn-color rounded-circle"><i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+            <div class="card text-center" style="width: 18rem;">
+                <img class="w-25 mx-auto" src="./images/divorce.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Divorce Law</h5>
+                  <p class="card-text">There are many variations of passages of Life-style available, but the majority have suffered alteration in some form, by injected humour.</p>
+                  <a href="#" class="btn btn-color rounded-circle"><i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+            <div class="card text-center" style="width: 18rem;">
+                <img class="w-25 mx-auto" src="./images/tax.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Tax Law</h5>
+                  <p class="card-text">There are many variations of passages of Life-style available, but the majority have suffered alteration in some form, by injected humour.</p>
+                  <a href="#" class="btn btn-color rounded-circle"><i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+              </div>
+            </div>
+    </div>
+</section>
 
 
 </main>
