client-section added

--- a/index.html
+++ b/index.html
@@ -47,11 +47,9 @@
 <!-- banner section -->
  <section>
         <div class="banner-img d-flex justify-content-center align-items-center">
-            <div class="text-center g-cols-2">
-                <h1 class="display-3 fw-bold text-white">We Provide Effective
-                    <br> Legal Solutions</h1>
-            <p class="text-white">There are many variations of passages of Life-style available, but the majority
-                <br> have suffered alteration in some form, by injected humour.</p>
+            <div class="text-center">
+                <h1 class="display-3 fw-bold text-white">We Provide Effective<br>Legal Solutions</h1>
+            <p class="text-white">There are many variations of passages of Life-style available, but the majority<br>have suffered alteration in some form, by injected humour.</p>
                 <button class="px-5 py-2 rounded border-0">Search your services</button>
                 <button class="btn-color px-4 py-2 rounded border-0">Search</button>
                 </div>
@@ -59,73 +57,175 @@
  </section>
 <!-- practice area section -->
 <section class="container-fluid my-5">
-    <h1 class="text-center">The Legal Practice Area</h1>
-    <p class="text-center">There are many variations of passages of Life-style available, but the majority have suffered
-        <br> alteration in some form, by injected humour.</p>
-        <div class="row row-cols-1 row-cols-lg-3 gy-3">
+    <h1 class="text-center mb-3">The Legal Practice Area</h1>
+    <p class="text-center mb-5">There are many variations of passages of Life-style available, but the majority have suffered<br>alteration in some form, by injected humour.</p>
+        <div class="row row-cols-1 row-cols-lg-3 gy-3 mx-auto ms-5">
         <div class="col">
-            <div class="card text-center" style="width: 18rem;">
-                <img class="w-25 mx-auto" src="./images/business.png" class="card-img-top" alt="...">
+            <div class="card text-center" style="width:sm-100 lg- 18rem;">
+                <img class="w-25 mx-auto mt-3" src="./images/business.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Business Law</h5>
-                  <p class="card-text mb-5">There are many variations of passages of Life-style available, but the majority have suffered alteration in some form, by injected humour.</p>
-                  <a href="#" class="btn btn-color rounded-circle"><i class="fa-solid fa-arrow-right"></i></a>
+                  <p class="card-text">There are many variations of passages of Life-style available, but the majority have suffered alteration in some form, by injected humour.</p>
+                  <img src="./images/Frame.png" alt="">
                 </div>
               </div>
             </div>
             <div class="col">
-            <div class="card text-center bg-secondary-subtle" style="width: 18rem;">
-                <img class="w-25 mx-auto" src="./images/criminal.png" class="card-img-top" alt="...">
+            <div class="card text-center bg-secondary-subtle" style="width:sm-100 lg- 18rem;">
+                <img class="w-25 mx-auto mt-3" src="./images/criminal.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Criminal Law</h5>
                   <p class="card-text">There are many variations of passages of Life-style available, but the majority have suffered alteration in some form, by injected humour.</p>
-                  <a href="#" class="btn btn-color rounded-circle"><i class="fa-solid fa-arrow-right"></i></a>
+                  <img src="./images/Frame.png" alt="">
                 </div>
               </div>
             </div>
             <div class="col">
-            <div class="card text-center" style="width: 18rem;">
-                <img class="w-25 mx-auto" src="./images/child.png" class="card-img-top" alt="...">
+            <div class="card text-center" style="width:sm-100 lg-18rem;">
+                <img class="w-25 mx-auto mt-3" src="./images/child.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Child Support</h5>
                   <p class="card-text">There are many variations of passages of Life-style available, but the majority have suffered alteration in some form, by injected humour.</p>
-                  <a href="#" class="btn btn-color rounded-circle"><i class="fa-solid fa-arrow-right"></i></a>
+                  <img src="./images/Frame.png" alt="">
                 </div>
               </div>
             </div>
             <div class="col">
-            <div class="card text-center" style="width: 18rem;">
-                <img class="w-25 mx-auto" src="./images/education.png" class="card-img-top" alt="...">
+            <div class="card text-center" style="width:sm-100 lg- 18rem;">
+                <img class="w-25 mx-auto mt-3" src="./images/education.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Education Law</h5>
                   <p class="card-text">There are many variations of passages of Life-style available, but the majority have suffered alteration in some form, by injected humour.</p>
-                  <a href="#" class="btn btn-color rounded-circle"><i class="fa-solid fa-arrow-right"></i></a>
+                  <img src="./images/Frame.png" alt="">
                 </div>
               </div>
             </div>
             <div class="col">
-            <div class="card text-center" style="width: 18rem;">
-                <img class="w-25 mx-auto" src="./images/divorce.png" class="card-img-top" alt="...">
+            <div class="card text-center" style="width:sm-100 lg- 18rem;">
+                <img class="w-25 mx-auto mt-3" src="./images/divorce.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Divorce Law</h5>
                   <p class="card-text">There are many variations of passages of Life-style available, but the majority have suffered alteration in some form, by injected humour.</p>
-                  <a href="#" class="btn btn-color rounded-circle"><i class="fa-solid fa-arrow-right"></i></a>
+                  <img src="./images/Frame.png" alt="">
                 </div>
               </div>
             </div>
             <div class="col">
-            <div class="card text-center" style="width: 18rem;">
-                <img class="w-25 mx-auto" src="./images/tax.png" class="card-img-top" alt="...">
+            <div class="card text-center" style="width:sm-100 lg- 18rem;">
+                <img class="w-25 mx-auto mt-3" src="./images/tax.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Tax Law</h5>
                   <p class="card-text">There are many variations of passages of Life-style available, but the majority have suffered alteration in some form, by injected humour.</p>
-                  <a href="#" class="btn btn-color rounded-circle"><i class="fa-solid fa-arrow-right"></i></a>
+                  <img src="./images/Frame.png" alt="">
                 </div>
               </div>
             </div>
     </div>
 </section>
+<!-- Client Say Section -->
+<section class="container-fluid my-5">
+<h1 class="text-center mb-3">What Our Client Say</h1>
+<p class="text-center mb-3">There are many variations of passages of Life-style available, but the majority have<br>suffered alteration in some form, by injected humour.</p>
+    <!-- carousel -->
+    <div id="carouselExampleIndicators" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="carousel-img-1 d-flex justify-content-center align-items-center">
+            <div class="text-center">
+              <img src="./images/person 1.png" alt="">
+                <h5 class="display-5 fw-semibold text-white">Awlad Hossain</h5>
+                <h6 class="mb-3 text-white">UIX Designer</h6>
+            <p class="text-white">Contrary to popular belief, Life-style is not simply random text. It has roots in a piece of classical Latin<br>literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney<br>College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                </div>
+         </div>
+        </div>
+        <div class="carousel-item">
+          <div class="carousel-img-2 d-flex justify-content-center align-items-center">
+            <div class="text-center">
+              <img src="./images/person 2.png" alt="">
+                <h5 class="display-5 fw-semibold text-white">Imam Hossain</h5>
+                <h6 class="mb-3 text-white">UIX Designer</h6>
+            <p class="text-white">Contrary to popular belief, Life-style is not simply random text. It has roots in a piece of classical Latin<br>literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney<br>College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                </div>
+              </div>
+        </div>
+        <div class="carousel-item">
+          <div class="carousel-img-3 d-flex justify-content-center align-items-center">
+            <div class="text-center">
+              <img src="./images/person 3.png" alt="">
+                <h5 class="display-5 fw-semibold text-white">Shakib Hossain</h5>
+                <h6 class="mb-3 text-white">UIX Designer</h6>
+            <p class="text-white">Contrary to popular belief, Life-style is not simply random text. It has roots in a piece of classical Latin<br>literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney<br>College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                </div>
+         </div>
 
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+</section>
+<!-- FAQ section -->
+<section class="mt-5 py-5 px-3">
+  <h1 class="text-center my-3">Frequently Asked Any Questions</h1>
+  <p class="text-center mb-3">There are many variations of passages of Life-style available, but the majority have<br>suffered alteration in some form, by injected humour.</p>
+<div class="row row-cols-1 row-cols-md-2 mt-5 g-4">
+  <div class="col bg-secondary-subtle rounded">
+    <div class="accordion" id="accordionExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            Accordion Item #1
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            Accordion Item #2
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            Accordion Item #3
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col text-center">
+    <img class="w-75 "src="./images/faq.png" alt="">
+  </div>
+</div>
+</section>
 
 </main>
     <!-- footer section -->
