--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               </div>
             </div>
             <div class="col">
-            <div class="card text-center" style="width:sm-100 lg- 18rem;">
+            <div class="card text-center" style="width:sm-100 lg- 18rem; ">
                 <img class="w-25 mx-auto mt-3" src="./images/divorce.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Divorce Law</h5>
@@ -244,7 +244,42 @@
 </main>
     <!-- footer section -->
     <footer>
+<section class="bg-dark">
+<div class="container py-5">
+  <div class="row text-white">
+    <div class="col-md-4">
+      <img class="text-white py-4" src="./images/logo.png" alt="">
+      <p class="text-white">There are many variations of<br>passages of Life-style<br>available, but the majority have<br>suffered alteration in some<br>form, by injected humour.</p>
+    </div>
+    <div class="col-md-2">
+      <h5 class="py-4">Useful Link</h5>
+      <p>Home</p>
+      <p>About Us</p>
+      <p>Cases</p>
+      <p>Blog</p>
+      <p>Contact Us</p>
+    </div>
+    <div class="col-md-2">
+      <h5 class="py-4">Contact Now</h5>
+      <p>555 4th 5t NW, Washington
+        DC 20530, United States</p>
+      <p>+88 01750 000 000
+        +88 01750 000 000</p>
+      <p>info@gmail.com
+        info@gmail.com</p>
+    </div>
+    <div class="col-md-4">
+      <h5 class="py-4">Subscribe</h5>
+      <p>Subscribe for our latest & Articles. We Won’t Give You Spam Mails</p>
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Email Address" aria-label="Recipient's username" aria-describedby="button-addon2">
+        <button class="btn btn-outline-secondary btn-color" type="button" id="button-addon2"><i class="fa-regular fa-paper-plane"></i></button>
+      </div>      
+    </div>
+  </div>
+</div>
 
+</section>
     </footer>
     <!-- bs js file -->
     <script src="./js/bootstrap.min.js"></script>
